--- a/client/src/pages/user-logs/user-logs.page.html
+++ b/client/src/pages/user-logs/user-logs.page.html
@@ -1,102 +1,6 @@
-<!--<app-page title="User Logs">-->
-<!--    <section>-->
-        <p>
-            Below are the user logs for the current user.
-            Current actions being logged: {{numLogs}}
-        </p>
-        <table class="table table-striped table-dark table-hover table-sm">
-            <thead>
-                <td style="width: auto;"><b>Timestamp</b></td>
-                <td style="width: 10pt;"><b>Status</b></td>
-                <td style="width: auto;"><b>Action</b></td>
-            </thead>
-            <tbody>
-
-                {% for i in serializeduserlogs %}
-                <tr style="min-height: 25px; height: 25px;">
-                    <td>{{ i.timestamp }}</td>
-                    <td>{{ i.status }}</td>
-                    <td>{{ i.action }}</td>
-                </tr>
-                {% endfor %}
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[1].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[1].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[1].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[0].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[0].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[0].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[2].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[2].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[2].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[3].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[3].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[3].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[4].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[4].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[4].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[5].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[5].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[5].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[6].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[6].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[6].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[7].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[7].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[7].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[8].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[8].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[8].action }}</td>-->
-<!--                </tr>-->
-<!--                <tr style="min-height: 25px; height: 25px;">-->
-<!--                    <td>{{ serializeduserlogs[9].timestamp }}</td>-->
-<!--                    <td>{{ serializeduserlogs[9].status }}</td>-->
-<!--                    <td>{{ serializeduserlogs[9].action }}</td>-->
-<!--                </tr>-->
-
-
-            </tbody>
-        </table>
-        <button class="settings"
-        (click)="goToSettings()"
-        >
-        Settings
-        </button>
-
-<!--</app-page>-->
-<style>
-    table, th, td {
-  border: 1px solid black;
-    }
-    td {
-        padding-right:10px;
-        padding-left:10px;
-    }
-    th {
-        padding:10px;
-    }
-    section {
-        margin: 5px;
-    }
-    table { margin: 20px; }
-    p { margin: 20px; }
-    button { margin: 20px; }
-    tr { background-color: white; }
-    td { background-color: white; }
-</style>
+<app-modal title="User Logs" (onDismiss)="dismiss()">
+    <h1>User logs</h1>
+    <p *ngFor="let userlog of serializeduserlogs">
+        {{ userlog.timestamp }} <b>{{ userlog.status }}</b> {{ userlog.action }}
+    </p>
+</app-modal>
