--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,8 +1,6 @@
-<app-page
-    class="start-screen"
-    >
+<app-page class="start-screen">
     <div>
-        <div class="heartsteps-logo">Heartsteps</div>
+        <div class="heartsteps-logo">JustWalk</div>
     </div>
     <div class="headline">
         <h1>Welcome!</h1>
