added feature flag check to client dashboard
if the flag 'nlm' is present, weekly progress, weekly goal,
and progress wheel are hidden

--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -1,20 +1,17 @@
 <dashboard-notifications></dashboard-notifications>
-<heartsteps-anchor-message *ngIf="anchorMessage"
-    [message]="anchorMessage"
-    >
+<heartsteps-anchor-message *ngIf="anchorMessage" [message]="anchorMessage">
 </heartsteps-anchor-message>
 <article>
-    <h3>Weekly Progress</h3>
-    <p>Weekly goal: <span *ngIf="weeklyGoal">{{weeklyGoal}} min</span></p>
-    <heartsteps-weekly-progress></heartsteps-weekly-progress>
+    <ng-container *ngIf="!hasFlag('nlm')">
+        <h3>Weekly Progress</h3>
+        <p>Weekly goal: <span *ngIf="weeklyGoal">{{weeklyGoal}} min</span></p>
+        <heartsteps-weekly-progress></heartsteps-weekly-progress>
+    </ng-container>
     <h3><span>Today,</span> {{formattedDate}}</h3>
     <heartsteps-daily-summary [summary]="summary"></heartsteps-daily-summary>
-    <heartsteps-activity-daily-update [summary]="summary"></heartsteps-activity-daily-update>
+    <heartsteps-activity-daily-update
+        [summary]="summary"
+    ></heartsteps-activity-daily-update>
     <heartsteps-daily-step-goal></heartsteps-daily-step-goal>
-    
 </article>
-<activity-plan-day
-    [date]="today"
-    label="Today's Plan"
-    >
-</activity-plan-day>
+<activity-plan-day [date]="today" label="Today's Plan"> </activity-plan-day>
