--- a/client/src/heartsteps/daily-summaries/daily-activities-update.html
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.html
@@ -1,6 +1,4 @@
-<button 
-    (click)="refresh()"
-    >
+<button (click)="refresh()">
     Update Fitbit data
     <span>Last updated {{updateTimeFormatted}}</span>
 </button>
