added bout_planning and daily stepgoal schedule

--- a/client/src/heartsteps/daily-step-goal/daily-step-goal.html
+++ b/client/src/heartsteps/daily-step-goal/daily-step-goal.html
@@ -1,5 +1,4 @@
 <ul>
     <li>{{dailyStepGoal}} <span>Daily Step Goal</span></li>
-    <li>{{dailyStepDiff}} <span>Steps to Go</span></li>
+    <li>{{dailyStepsToGo}} <span>Steps to Go</span></li>
 </ul>
-
