--- a/client/src/pages/enrollment/welcome.page.html
+++ b/client/src/pages/enrollment/welcome.page.html
@@ -1,21 +1,32 @@
 <app-page class="start-screen">
     <article>
-        <h1 class="heartsteps-logo">HeartSteps</h1>
+        <h1 class="heartsteps-logo">JustWalk</h1>
         <button (click)="goToEnrollment()">Login</button>
     </article>
     <article class="heartsteps-page">
         <header>
-            <h2>About HeartSteps</h2>
+            <h2>About JustWalk</h2>
         </header>
         <div class="content">
-            <p>Physical activity is a key aspect of effective blood pressure management. It strengthens the heart and helps the cardiovascular system function in an optimal way. Physical activity is particularly important for people with type 1 hypertension (systolic blood pressure between 130 and 140mm Hg), as regular physical activity can help reduce blood pressure and decrease the risk of cardiovascular events such as strokes and heart attacks. For many individuals with blood pressure in the type 1 hypertension range, regular physical activity can help them reduce their blood pressure without the use of medications, and it is, along with a heart-healthy diet, the recommended treatment for people with slightly elevated blood pressure.</p>
-            <p>HeartSteps is a research project funded by the National Institutes of Health that explores new ways that mobile technology—smartphones and wearable activity trackers—can be used to help patients to increase their physical activity. We have developed a mobile app that works with a Fitbit activity tracker to help individuals set activity goals, plan how they will be active, and remain motivated to find ways to incorporate physical activity into their daily lives. Our ultimate goal is to develop technology that effectively supports physical activity over the long-term, enabling people to become and remain active, even as they go through the many inevitable life transitions such as illness, moves, or changes in jobs.</p>
-            <p>HeartSteps is a collaboration of researchers with many different types of expertise. Our team of investigators consists of the following:</p>
-            <p><a href="http://www.pedjaklasnja.com/">Predrag "Pedja" Klasnja,</a> PhD is an Assistant Professor of Information at the University of Michigan and a Scientific Investigator at the Kaiser Permanente Washington Health Research Institute. Dr. Klasnja's background is in human-centered design and health informatics, and his research focuses on the design of technologies that help individuals manage their health in their daily lives.</p>
-            <p><a href="http://people.seas.harvard.edu/~samurphy/">Susan A. Murphy,</a> PhD is a Professor of Statistics at Harvard University. Dr. Murphy develops experimental designs for clinical trials and new ways to analyze data from people who take part in clinical trials. Her work also aims to discover when and where it is best for a mobile health tool, such as a smartphone app, to provide support to individuals to maximize the benefit of this support and minimize the burden these tools place on users.</p>
-            <p><a href="https://ambujtewari.github.io/">Ambuj Tewari,</a> PhD is an Associate Professor of Statistics and Computer Science at the University of Michigan. Dr. Tewari is a computer scientist who specializes in algorithms that enable systems to adapt their functioning over time to maximize certain outcomes, such as health outcomes in the case of mHealth systems.</p>
-            <p><a href="https://profiles.ucsd.edu/eric.hekler">Eric Hekler,</a> PhD is an Associate Professor of Public Health at the University of California San Diego. Dr. Hekler is a psychologist who conducts research on health behavior change. He is particularly interested in physical activity, and has developed a number of interventions to help individuals to walk more in their daily lives.</p>
-            <p><a href="https://www.kpwashingtonresearch.org/our-research/our-scientists/green-beverly-b/">Beverly Green,</a> MD is a Scientific Investigator at the Kaiser Permanente Washington Health Research Institute. Her research focuses on improving health care delivery for cardiovascular diseases and colorectal cancer.</p>
+            <p>Physical activity is a key aspect of effective blood pressure management. It strengthens the heart and helps the cardiovascular system function in an optimal way. Physical activity is particularly important for people with type 1 hypertension
+                (systolic blood pressure between 130 and 140mm Hg), as regular physical activity can help reduce blood pressure and decrease the risk of cardiovascular events such as strokes and heart attacks. For many individuals with blood pressure
+                in the type 1 hypertension range, regular physical activity can help them reduce their blood pressure without the use of medications, and it is, along with a heart-healthy diet, the recommended treatment for people with slightly elevated
+                blood pressure.</p>
+            <p>JustWalk is a research project funded by the National Institutes of Health that explores new ways that mobile technology—smartphones and wearable activity trackers—can be used to help patients to increase their physical activity. We have developed
+                a mobile app that works with a Fitbit activity tracker to help individuals set activity goals, plan how they will be active, and remain motivated to find ways to incorporate physical activity into their daily lives. Our ultimate goal is
+                to develop technology that effectively supports physical activity over the long-term, enabling people to become and remain active, even as they go through the many inevitable life transitions such as illness, moves, or changes in jobs.</p>
+            <p>JustWalk is a collaboration of researchers with many different types of expertise. Our team of investigators consists of the following:</p>
+            <p><a href="http://www.pedjaklasnja.com/">Predrag "Pedja" Klasnja,</a> PhD is an Assistant Professor of Information at the University of Michigan and a Scientific Investigator at the Kaiser Permanente Washington Health Research Institute. Dr.
+                Klasnja's background is in human-centered design and health informatics, and his research focuses on the design of technologies that help individuals manage their health in their daily lives.</p>
+            <p><a href="http://people.seas.harvard.edu/~samurphy/">Susan A. Murphy,</a> PhD is a Professor of Statistics at Harvard University. Dr. Murphy develops experimental designs for clinical trials and new ways to analyze data from people who take
+                part in clinical trials. Her work also aims to discover when and where it is best for a mobile health tool, such as a smartphone app, to provide support to individuals to maximize the benefit of this support and minimize the burden these
+                tools place on users.</p>
+            <p><a href="https://ambujtewari.github.io/">Ambuj Tewari,</a> PhD is an Associate Professor of Statistics and Computer Science at the University of Michigan. Dr. Tewari is a computer scientist who specializes in algorithms that enable systems
+                to adapt their functioning over time to maximize certain outcomes, such as health outcomes in the case of mHealth systems.</p>
+            <p><a href="https://profiles.ucsd.edu/eric.hekler">Eric Hekler,</a> PhD is an Associate Professor of Public Health at the University of California San Diego. Dr. Hekler is a psychologist who conducts research on health behavior change. He is
+                particularly interested in physical activity, and has developed a number of interventions to help individuals to walk more in their daily lives.</p>
+            <p><a href="https://www.kpwashingtonresearch.org/our-research/our-scientists/green-beverly-b/">Beverly Green,</a> MD is a Scientific Investigator at the Kaiser Permanente Washington Health Research Institute. Her research focuses on improving
+                health care delivery for cardiovascular diseases and colorectal cancer.</p>
         </div>
     </article>
 </app-page>
