--- a/client/src/pages/nlm/generic-messages-modal.html
+++ b/client/src/pages/nlm/generic-messages-modal.html
@@ -1,8 +1,4 @@
-<app-modal
-    title="HeartSteps"
-    dismiss="Cancel"
-    (onDismiss)="goBack()"
-    >
+<app-modal title="JustWalk" dismiss="Cancel" (onDismiss)="goBack()">
     <h1>The sun is awesome! Can you squeeze 10 minutes of walk in the next 3 hours?</h1>
     <p>&gt;34k people are running right now! 🏃🏃‍♀️🏃‍♂️<br/>You wanna join?</p>
     <p><a>I love to! 💪</a></p>
