--- a/client/src/pages/onboard/fitbit-clock-face-pair.page.html
+++ b/client/src/pages/onboard/fitbit-clock-face-pair.page.html
@@ -1,16 +1,10 @@
 <p>
-    Install the HeartSteps Fitbit clock face from the
-    Fitbit gallery, then enter the pin from the clock face into the form below. 
+    Install the JustWalk Fitbit clock face from the Fitbit gallery, then enter the pin from the clock face into the form below.
 </p>
 <button (click)="openFitbitGallery()">Install Fitbit Clock Face</button>
-<p>To pair the HeartSteps Fitbit clock face with your account, enter the pin shown on your watch face on the screen below.</p>
-<heartsteps-fitbit-clock-face-pair
-    (paired)="paired()"
-    >
+<p>To pair the JustWalk Fitbit clock face with your account, enter the pin shown on your watch face on the screen below.</p>
+<heartsteps-fitbit-clock-face-pair (paired)="paired()">
 </heartsteps-fitbit-clock-face-pair>
-<button (click)="skip()"
-    class="heartsteps-minor-button"
-    >
+<button (click)="skip()" class="heartsteps-minor-button">
     Skip
 </button>
-
