--- a/client/src/pages/setup/fitbit-authorize.page.html
+++ b/client/src/pages/setup/fitbit-authorize.page.html
@@ -1,10 +1,8 @@
-<p>HeartSteps uses Fitbit to collect information about your physical activity. Activities detected by Fitbit will be shown in HeartSteps.</p>
+<p>JustWalk uses Fitbit to collect information about your physical activity. Activities detected by Fitbit will be shown in JustWalk.</p>
 <p>
-    Please <strong>allow all permissions</strong> when connecting Fitbit to HeartSteps.
+    Please <strong>allow all permissions</strong> when connecting Fitbit to JustWalk.
 </p>
-<button (click)="authorize()"    
-    class="heartsteps-primary-button"
-    >
+<button (click)="authorize()" class="heartsteps-primary-button">
     Connect to Fitbit
 </button>
 <button (click)="update()">Next</button>
