--- a/client/src/heartsteps/enrollment/enroll.html
+++ b/client/src/heartsteps/enrollment/enroll.html
@@ -1,19 +1,8 @@
-<app-form
-    [formGroup]="enrollmentForm"
-    (onSubmit)="enroll()"
-    submitLabel="Login"
-    [error]="error"
-    >
+<app-form [formGroup]="enrollmentForm" (onSubmit)="enroll()" submitLabel="Login" [error]="error">
     <p>Enter the entry token included in the invitation letter you received in the mail.</p>
-    <app-text-field
-        formControlName="entryToken"
-        label="Entry code"
-        >
+    <app-text-field formControlName="entryToken" label="Entry code">
     </app-text-field>
-    <app-year-field
-        formControlName="birthYear"
-        label="Birth year"
-        >
+    <app-year-field formControlName="birthYear" label="Birth year">
     </app-year-field>
-    <p>By logging into HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
+    <p>By logging into JustWalk, you are agreeing to <a (click)="openPrivacyPolicy()">JustWalk Privacy Policy.</a></p>
 </app-form>
