--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-  <meta charset="UTF-8">
-  <title>HeartSteps</title>
-  
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
+    <meta charset="UTF-8">
+    <title>JustWalk</title>
 
-  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-  <link rel="manifest" href="manifest.json">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    <link rel="manifest" href="manifest.json">
 
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAulDKv1GMLDDtxO4LYPIWLkSGJnGYAeGQ&libraries=places"></script>
-  <script src="cordova.js"></script>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <link href="build/main.css" rel="stylesheet">
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAulDKv1GMLDDtxO4LYPIWLkSGJnGYAeGQ&libraries=places"></script>
+    <script src="cordova.js"></script>
+
+    <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
-  <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+    <!-- Ionic's root component and where the app will load -->
+    <ion-app></ion-app>
 
-  <!-- The polyfills js is generated during the build process -->
-  <script src="build/polyfills.js"></script>
+    <!-- The polyfills js is generated during the build process -->
+    <script src="build/polyfills.js"></script>
 
-  <!-- The vendor js is generated during the build process
+    <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
-  <script src="build/vendor.js"></script>
+    <script src="build/vendor.js"></script>
 
-  <!-- The main bundle js is generated during the build process -->
-  <script src="build/main.js"></script>
+    <!-- The main bundle js is generated during the build process -->
+    <script src="build/main.js"></script>
 
 </body>
+
 </html>
