--- a/client/src/pages/setup/complete.page.html
+++ b/client/src/pages/setup/complete.page.html
@@ -1,12 +1,11 @@
-<app-page
-    title="Complete"
-    >
-    <p>Thank you for completing enrollment in the HeartSteps study.</p>
+<app-page title="Complete">
+    <p>Thank you for completing enrollment in the JustWalk study.</p>
     <h3>Week 1</h3>
     <p>Wear your Fitbit for a week during waking hours. You may also use it while you sleep if you want to.</p>
     <h3>Week 2</h3>
-    <p>Install and start using the HeartSteps app.</p>
-    <p>After you have worn your Fitbit for a week, you will receive a text message from the study with a link to the HeartSteps app. Please install the app on your phone. You will need your <em>Entry Code</em> and your birth year to login to the app. Refer to the instructions included in the mailing.</p>
+    <p>Install and start using the JustWalk app.</p>
+    <p>After you have worn your Fitbit for a week, you will receive a text message from the study with a link to the JustWalk app. Please install the app on your phone. You will need your <em>Entry Code</em> and your birth year to login to the app. Refer
+        to the instructions included in the mailing.</p>
     <p>Please don't hesitate to call {{studyContactName}} at <em>{{studyContactNumber}}</em> if you have questions or need assistance.</p>
     <p>We will call you in about a week to check in and see how things are going.</p>
     <button (click)="logout()">Logout</button>
