--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -7,5 +7,5 @@
         <p>Login and get started.</p>
     </div>
     <button (click)="goToEnrollPage()">Login</button>
-    <p style="margin:1em;flex-grow:0;text-align: center;">Heartsteps {{buildVersion}}, built on {{buildDate}}.</p>
+    <p style="margin:1em;flex-grow:0;text-align: center;">JustWalk {{buildVersion}}, built on {{buildDate}}.</p>
 </app-page>
