--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -2,15 +2,13 @@
 </heartsteps-anchor-message>
 <article>
     <!-- <ng-container *ngIf="hasFlag('weekly_progress')"> -->
-    <h3>Weekly Progress</h3>
-    <p>Weekly goal: <span *ngIf="weeklyGoal">{{weeklyGoal}} min</span></p>
-    <heartsteps-weekly-progress></heartsteps-weekly-progress>
+    <dashboard-daily-stepgoal></dashboard-daily-stepgoal>
     <!-- </ng-container> -->
     <h3><span>Today,</span> {{formattedDate}}</h3>
     <heartsteps-daily-summary [summary]="summary"></heartsteps-daily-summary>
     <heartsteps-activity-daily-update
         [summary]="summary"
-    ></heartsteps-activity-daily-update>
-    <heartsteps-daily-step-goal></heartsteps-daily-step-goal>
+    >
+</heartsteps-activity-daily-update>
 </article>
 <activity-plan-day [date]="today" label="Today's Plan"> </activity-plan-day>
