--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -1,3 +1,4 @@
+<dashboard-notifications></dashboard-notifications>
 <heartsteps-anchor-message *ngIf="anchorMessage" [message]="anchorMessage">
 </heartsteps-anchor-message>
 <article>
